<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Anasayfa">

    <Button
        android:id="@+id/b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rotation="0"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/hm" />
    <Button
        android:id="@+id/b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rotation="0"
        android:layout_below="@+id/b"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:text="@string/md" />
    <Button
        android:id="@+id/b2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rotation="0"
        android:layout_below="@+id/b1"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:text="@string/on_of" />

    <Button
        android:id="@+id/b3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b2"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:rotation="0"
        android:text="@string/tas" />

    <Button
        android:id="@+id/b4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b3"
        android:layout_marginTop="20dp"
        android:rotation="0"
        android:textSize="16sp"
        android:text="@string/loginn" />

    <Button
        android:id="@+id/b5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b4"
        android:layout_marginTop="20dp"
        android:rotation="0"
        android:text="@string/exit"
        android:textSize="16sp"
        android:visibility="invisible" />
</RelativeLayout>