<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MevsimDegisimi">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/btn" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/rb1"
                android:textColor="@color/design_default_color_primary"
                android:textSize="19sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/rb2"
                android:textColor="@color/design_default_color_primary"
                android:textSize="19sp" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/rb3"
                android:textColor="@color/design_default_color_primary"
                android:textSize="19sp" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:checked="true"
                android:text="@string/rb4"
                android:textColor="@color/design_default_color_primary"
                android:textSize="19sp" />

        </RadioGroup>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10sp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/spring" />


    </LinearLayout>
    <Button
        android:id="@+id/mdbtn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"  />



</androidx.constraintlayout.widget.ConstraintLayout>